# rati

./: Cargo.toml  README.md
src/: archive.rs  main.rs
